# apartment-planner

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: ApartmentPlanner.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
